--- a/index.html
+++ b/index.html
@@ -131,6 +131,6 @@ var _hmt = _hmt || [];
 </script>
 
 		  
-
+<a href="http://beian.miit.gov.cn/" target="_blank"> 冀ICP备2020030070号</a>
 	</body>
 </html>
